public/c/main.css
html, button, input, select, textarea {
  font-family: sans-serif; font-size: 100%; }
*:not(button) { margin: 0; padding: 0; }
body {
  padding: 0 12px; color: #333; background: white; min-width: 750px;
  max-width: 1560px; }
body > * { width: 100%; } /* Firefox */
body > *, .body > *, section.playlist-manager > *, section.playlist > * {
  margin: 12px 0; }
body > header, section { background: #eee; border: 1px solid #ddd; }
section { padding: 12px; }
body > header > * > * { padding: 12px; }
h1 { line-height: 48px; }
p { line-height: 24px; }
a, input[type=button], input[type=submit] { cursor: pointer; }
ul { list-style: none; }
a { color: #666; }
a:hover { color: #888; }
table { width: 100%; border-collapse: collapse; }

body:not(.auth) .auth-on { display: none; }

header, div.main { display: table; width: 100%; }
header > *, div.main > * { display: table-row; }
header > * > *, div.main > * > * { display: table-cell; vertical-align: top; }
body > header > div > h1 { vertical-align: middle; }
body > header > div > div > * { text-align: right; padding-left: 12px; }
body > header p.controls { padding-top: 12px; }

div.main > div > div:first-child { width: 300px; }
section.playlist-manager { margin-right: 6px; }
section.playlist { margin-left: 6px; }

section.playlist-manager, section.playlist {
  min-height: 120px; position: relative;
}
section.playlist-manager > *, section.playlist > * {
  margin: 12px 0;
}
section.playlist-manager li {
  margin: 0 -12px;
}
section.playlist-manager li a {
  display: block;
  padding: 0 12px;
}

.body > *:first-child, section.playlist-manager > *:first-child,
  section.playlist > *:first-child { margin-top: 0; }
.body > *:last-child, section.playlist-manager > *:last-child,
  section.playlist > *:last-child { margin-bottom: 0; }

h3 { line-height: 24px; }
th, td { line-height: 20px; padding: 8px 6px; }
th { text-align: right; font-weight: normal; vertical-align: top; }
td { text-align: left; }
td input:not([type=submit]):not([type=button]), td textarea { width: 360px; }

input[type=button], input[type=submit] {
  height: 22px; padding: 0 12px;
  background: #fdfdfd;
  border: 1px solid #ccc;
  -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px;
}
input[type=button]:hover, input[type=submit]:hover {
  background: #fff;
}
input:disabled { color: #bbb; }

.overlay {
  position: absolute; z-index: 1; display: none;
  -moz-box-shadow:    12px 12px 6px 0 #ccc;
  -webkit-box-shadow: 12px 12px 6px 0 #ccc;
  box-shadow:         12px 12px 6px 0 #ccc;
}
.playlist-form { top: 48px; left: 96px; }
.add-tracks-form { top: 20px; right: 20%; width: 630px; }
.add-tracks-form form p { white-space: nowrap; }

.add-tracks-form div.table, section.playlist div.table { margin-left: -12px; margin-right: -12px }
tbody.tracks td { padding: 0; font-size: 12px; cursor: pointer; }
tbody.tracks tr:hover td { background: #f8f8f8; }
tbody.tracks td:first-child { padding-left: 12px; font-weight: bold; }
tbody.tracks td:last-child {
  text-align: right; white-space:nowrap; padding-right: 12px;  }
tbody.tracks tr.selected td, li.selected { background: white; }
tbody.tracks tr.playing td, li.playing { background: #ffffbf; }
tbody.tracks td input.playstop { padding: 0; width: 49px; }

.overlay p.close { position: absolute; top: 0; right: 10px; font-size: 14px; }
.overlay p.close a { color: #888; cursor: pointer; }

th.required::after { content: " *"; }

h2 { font-size: 18px; }
input.add-tracks { margin-right: 6px; }
div.controls { text-align: right; }
p.edit { line-height: 36px; }
p.edit input, tbody.tracks td input { height: 16px; font-size: 12px; vertical-align: middle; }
p.edit input + input { margin-left: 3px; }

